<resources>
    <string name="app_name">FiveActivity</string>
    <string name="act02">Activity_02</string>
    <string name="act03">Activity_03</string>
    <string name="act04">Activity_04</string>
    <string name="act05">Activity_05</string>
    <string name="ok">ok</string>
    <string name="cancel">cancel</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="impl">com.package.name.MyAction</string>
</resources>
